prod/apps/otel-ui-otlp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-ui-otlp-proxy
  labels:
    app: otel-ui
spec:
  type: ExternalName
  externalName: otel-agent-opentelemetry-collector.observability.svc.cluster.local
  ports:
    - name: otlp-http
      port: 4318
      protocol: TCP
