prod/apps/otelapidemo-dotnet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelapidemo
  labels:
    app: otelapidemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otelapidemo
  template:
    metadata:
      labels:
        app: otelapidemo
      annotations:
        instrumentation.opentelemetry.io/inject-dotnet: "observability/dotnet-auto-prod"
    spec:
      containers:
        - name: otelapidemo
          image: <ACR_LOGIN_SERVER>/otelapidemo:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1654
            capabilities:
              drop:
                - ALL
---
apiVersion: v1
kind: Service
metadata:
  name: otelapidemo
  labels:
    app: otelapidemo
spec:
  type: ClusterIP
  selector:
    app: otelapidemo
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
