prod/apps/otel-ui-ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-ui
  labels:
    app: otel-ui
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: otel-ui
                port:
                  name: http
