prod/apps/otelapidemo-ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otelapidemo
  labels:
    app: otelapidemo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /dotnet(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: otelapidemo
                port:
                  name: http
          - path: /python(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: otelapidemo-python
                port:
                  name: http
